@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.URL;
 import java.nio.charset.Charset;
-import java.util.Arrays;
 import java.util.List;
 
 public class TestResources {
@@ -19,7 +18,7 @@ public class TestResources {
     }
 
     public static List<URL> getRegressions() {
-        return Arrays.asList(
+        return List.of(
                 TestResources.class.getResource("/cmark-regression.txt"),
                 TestResources.class.getResource("/commonmark.js-regression.txt")
         );
