@@ -15,7 +15,7 @@ import java.util.*;
 
 public class DocumentParser implements ParserState {
 
-    private static final Set<Class<? extends Block>> CORE_FACTORY_TYPES = new LinkedHashSet<>(Arrays.asList(
+    private static final Set<Class<? extends Block>> CORE_FACTORY_TYPES = new LinkedHashSet<>(List.of(
             BlockQuote.class,
             Heading.class,
             FencedCodeBlock.class,
