@@ -3,12 +3,11 @@ package org.commonmark.renderer.html;
 import org.commonmark.internal.util.Escaping;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Map;
 
 public class HtmlWriter {
 
-    private static final Map<String, String> NO_ATTRIBUTES = Collections.emptyMap();
+    private static final Map<String, String> NO_ATTRIBUTES = Map.of();
 
     private final Appendable buffer;
     private char lastChar = 0;
